--- a/templates/base.html
+++ b/templates/base.html
@@ -558,7 +558,7 @@
             <div class="sidebar-header">
                 <div class="logo-container">
                     <a href="{{ url_for('home') }}">
-                        <img src="{{ url_for('static', filename='images/3890dc6b-18a8-4fd4-9b98-099d60d23087.png') }}" 
+                        <img src="{{ url_for('static', filename='images/logo.png') }}" 
                              alt="Referral Ninja Logo" 
                              class="sidebar-logo">
                     </a>
